# TCC-Animmendation

./: .gitignore
.docker/: docker-compose.yml
data_feeder/: .editorconfig  Makefile  (+2 more)
dataset_handler/: .editorconfig  .env  .gitignore  Makefile  Taskfile.yml  pyproject.toml  requirements.txt
dataset_handler/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
dataset_handler/.docker/: Dockerfile  docker-compose.yml
dataset_handler/scripts/: download_datasets.sh  generate_proto.sh
dataset_handler/src/: main.py
dataset_handler/src/entities/: env.py
dataset_handler/src/infrastructure/grpc/pb/: dataset_handler_pb2.py  dataset_handler_pb2.pyi  dataset_handler_pb2_grpc.py
dataset_handler/src/infrastructure/grpc/protos/: dataset_handler.proto
dataset_handler/src/infrastructure/grpc/servicers/: dataset_servicer.py
dataset_handler/src/services/anime/: parse_array.py  process.py
dataset_handler/src/services/anime_rating/: process.py
dataset_handler/src/usecases/: parse_datasets.py  shutdown_server.py  start_server.py
dataset_handler_rs/: .editorconfig  Cargo.toml
dataset_handler_rs/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
dataset_handler_rs/.docker/: .dockerignore  Dockerfile  docker-compose.yml
dataset_handler_rs/src/: main.rs
dataset_handler_rs/src/services/: mod.rs
dataset_handler_rs/src/services/anime/: date_transform.rs  mod.rs  process.rs
dataset_handler_rs/src/services/anime_rating/: process.rs
dataset_handler_rs/src/usecases/: mod.rs  process_datasets.rs
(+36 files in other folders)
