[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Henrique Tavares Aguiar", email = "ricktavares76@gmail.com"},
]
dependencies = [
    "pandas>=1.5.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black>=22.10.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
