[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Henrique Tavares Aguiar", email = "ricktavares76@gmail.com"},
]
dependencies = [
    "pandas>=1.5.1",
    "requests>=2.28.1",
    "loguru>=0.6.0",
    "retry>=0.9.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=22.10.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
