[package]
name = "dataset_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
convert_case = "0.6.0"
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["release_max_level_off"] }
polars = "0.24.3"
polars-lazy = "0.24.3"
